add test pipeline json data

--- a/life_expectancy/notebook.ipynb
+++ b/life_expectancy/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +131,7 @@
     "\n",
     "    def _load_json(self, input_path):\n",
     "        df = pd.read_json(input_path)\n",
+    "        df = df.rename(columns={'country' : 'region', 'life_expectancy': 'value'})\n",
     "        return df\n",
     "\n",
     "    def _load_csv(self, input_path):\n",
@@ -182,7 +183,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unit</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>region</th>\n",
+       "      <th>year</th>\n",
+       "      <th>value</th>\n",
+       "      <th>flag</th>\n",
+       "      <th>flag_detail</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y65</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>e</td>\n",
+       "      <td>estimated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y65</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>e</td>\n",
+       "      <td>estimated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y65</td>\n",
+       "      <td>BG</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>e</td>\n",
+       "      <td>estimated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y65</td>\n",
+       "      <td>CH</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>e</td>\n",
+       "      <td>estimated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y65</td>\n",
+       "      <td>CY</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>e</td>\n",
+       "      <td>estimated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474377</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y_LT1</td>\n",
+       "      <td>EE</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>69.4</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474378</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y_LT1</td>\n",
+       "      <td>HU</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>68.1</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474379</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y_LT1</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>73.8</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474380</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y_LT1</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474381</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y_LT1</td>\n",
+       "      <td>SK</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>70.3</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>474382 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       unit sex    age region  year  value flag flag_detail\n",
+       "0        YR   F    Y65     AT  2021   21.2    e   estimated\n",
+       "1        YR   F    Y65     BE  2021   22.2    e   estimated\n",
+       "2        YR   F    Y65     BG  2021   15.6    e   estimated\n",
+       "3        YR   F    Y65     CH  2021   23.1    e   estimated\n",
+       "4        YR   F    Y65     CY  2021   21.2    e   estimated\n",
+       "...     ...  ..    ...    ...   ...    ...  ...         ...\n",
+       "474377   YR   T  Y_LT1     EE  1960   69.4             None\n",
+       "474378   YR   T  Y_LT1     HU  1960   68.1             None\n",
+       "474379   YR   T  Y_LT1     NO  1960   73.8             None\n",
+       "474380   YR   T  Y_LT1     PT  1960   64.0             None\n",
+       "474381   YR   T  Y_LT1     SK  1960   70.3             None\n",
+       "\n",
+       "[474382 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load = StrategyLoad()\n",
+    "\n",
+    "# df = load.run(input_path='./data/eu_life_expectancy_raw.tsv')\n",
+    "\n",
+    "df = load.run(input_path='./data/eurostat_life_expect.json')\n",
+    "df\n",
+    "# clean = StrategyClean()\n",
+    "\n",
+    "# df_clean = clean.run(input_dataframe=df)\n",
+    "\n",
+    "# df_clean.reset_index(drop=True)\n",
+    "\n",
+    "# filter = StrategyFilter()\n",
+    "\n",
+    "# df_filter = filter.run(input_dataframe=df_clean, input_region=Region.PT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +420,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>3418</th>\n",
        "      <td>YR</td>\n",
        "      <td>F</td>\n",
        "      <td>Y65</td>\n",
@@ -225,7 +429,7 @@
        "      <td>21.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3420</th>\n",
        "      <td>YR</td>\n",
        "      <td>F</td>\n",
        "      <td>Y65</td>\n",
@@ -234,7 +438,7 @@
        "      <td>22.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3421</th>\n",
        "      <td>YR</td>\n",
        "      <td>F</td>\n",
        "      <td>Y65</td>\n",
@@ -243,7 +447,7 @@
        "      <td>15.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>3423</th>\n",
        "      <td>YR</td>\n",
        "      <td>F</td>\n",
        "      <td>Y65</td>\n",
@@ -252,7 +456,7 @@
        "      <td>23.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3424</th>\n",
        "      <td>YR</td>\n",
        "      <td>F</td>\n",
        "      <td>Y65</td>\n",
@@ -270,7 +474,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>474377</th>\n",
+       "      <th>895735</th>\n",
        "      <td>YR</td>\n",
        "      <td>T</td>\n",
        "      <td>Y_LT1</td>\n",
@@ -279,7 +483,7 @@
        "      <td>69.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>474378</th>\n",
+       "      <th>895749</th>\n",
        "      <td>YR</td>\n",
        "      <td>T</td>\n",
        "      <td>Y_LT1</td>\n",
@@ -288,7 +492,7 @@
        "      <td>68.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>474379</th>\n",
+       "      <th>895762</th>\n",
        "      <td>YR</td>\n",
        "      <td>T</td>\n",
        "      <td>Y_LT1</td>\n",
@@ -297,7 +501,7 @@
        "      <td>73.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>474380</th>\n",
+       "      <th>895764</th>\n",
        "      <td>YR</td>\n",
        "      <td>T</td>\n",
        "      <td>Y_LT1</td>\n",
@@ -306,7 +510,7 @@
        "      <td>64.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>474381</th>\n",
+       "      <th>895770</th>\n",
        "      <td>YR</td>\n",
        "      <td>T</td>\n",
        "      <td>Y_LT1</td>\n",
@@ -321,22 +525,22 @@
       ],
       "text/plain": [
        "       unit sex    age region  year  value\n",
-       "0        YR   F    Y65     AT  2021   21.2\n",
-       "1        YR   F    Y65     BE  2021   22.2\n",
-       "2        YR   F    Y65     BG  2021   15.6\n",
-       "3        YR   F    Y65     CH  2021   23.1\n",
-       "4        YR   F    Y65     CY  2021   21.2\n",
+       "3418     YR   F    Y65     AT  2021   21.2\n",
+       "3420     YR   F    Y65     BE  2021   22.2\n",
+       "3421     YR   F    Y65     BG  2021   15.6\n",
+       "3423     YR   F    Y65     CH  2021   23.1\n",
+       "3424     YR   F    Y65     CY  2021   21.2\n",
        "...     ...  ..    ...    ...   ...    ...\n",
-       "474377   YR   T  Y_LT1     EE  1960   69.4\n",
-       "474378   YR   T  Y_LT1     HU  1960   68.1\n",
-       "474379   YR   T  Y_LT1     NO  1960   73.8\n",
-       "474380   YR   T  Y_LT1     PT  1960   64.0\n",
-       "474381   YR   T  Y_LT1     SK  1960   70.3\n",
+       "895735   YR   T  Y_LT1     EE  1960   69.4\n",
+       "895749   YR   T  Y_LT1     HU  1960   68.1\n",
+       "895762   YR   T  Y_LT1     NO  1960   73.8\n",
+       "895764   YR   T  Y_LT1     PT  1960   64.0\n",
+       "895770   YR   T  Y_LT1     SK  1960   70.3\n",
        "\n",
        "[474382 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,17 +550,11 @@
     "\n",
     "df = load.run(input_path='./data/eu_life_expectancy_raw.tsv')\n",
     "\n",
-    "# df = load.run(input_path='./data/eurostat_life_expect.json')\n",
-    "\n",
     "clean = StrategyClean()\n",
     "\n",
     "df_clean = clean.run(input_dataframe=df)\n",
     "\n",
-    "df_clean.reset_index(drop=True)\n",
-    "\n",
-    "# filter = StrategyFilter()\n",
-    "\n",
-    "# df_filter = filter.run(input_dataframe=df_clean, input_region=Region.PT)"
+    "df_clean"
    ]
   },
   {
